# Moccer-Sim

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  generate_mesh.sh  geometry.cpp  lighting.cpp  main.cpp  main3.cpp
.github/workflows/: cppcheck.yml
config/: config.ini
proto/pb_src/: mocSim_Commands.proto  mocSim_Packet.proto  mocSim_Replacement.proto  ssl_gc_game_event.proto  ssl_simulation_robot_feedback.proto
src/: geometry.cpp  lighting.cpp  observer.cpp  observer.h  robot.cpp
src/include/: geometry.h  lighting.h  robot.h
src/models/: camera.cpp  camera.h  robot.cpp  robot.h
src/networks/: receiver.cpp  receiver.h  sender.cpp  sender.h
src/qml/: Ball.qml  Bot.qml  Field.qml  GameObjects.qml  Lighting.qml  List.qml  Main.qml  Paint.qml  Robot.qml  RolyPoly.qml  SOrbitCameraController.qml  Setting.qml  Side.qml  Sphere.qml  Wheel.qml  main.qml  side.mtl
src/qml/meshes/: side_mesh.mesh
src/qml/settings/: CrossMenu.qml  HBMenu.qml  List.qml  MenuItem.qml  Setting.qml  ToggleSwitch.qml
src/qml/sim/: Field.qml  GameObjects.qml  RobotInfo.qml
src/qml/viz/: VField.qml  VObject.qml  View.qml
src/utils/: collision.cpp  collision.h  motionControl.cpp  motionControl.h  physics.cpp  physics.h
